force-app/main/default/objects/Query_Escalation_Config__mdt/Query_Escalation_Config__mdt.object-meta.xml
<CustomObject>
    <label>Query_Escalation_Config</label>
    <pluralLabel>Query_Escalation_Config</pluralLabel>
</CustomObject>