force-app/main/default/objects/Query_Escalation_Config__mdt/fields/Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Custom_Notification__c</fullName>
    <label>Custom_Notification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>