force-app/main/default/objects/Query_Escalation_Config__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>