force-app/main/default/objects/Query_Escalation_Config__mdt/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <label>SLA_Days__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>